--- a/TextExtraction/appsettings.json
+++ b/TextExtraction/appsettings.json
@@ -1,36 +1,45 @@
 {
   "ConnectionStrings": {
-    //"Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=FaxVerification;Trusted_Connection=True;TrustServerCertificate=True"
-    "Default": "Server=databaseserver.cbyajjwizxr4.us-east-1.rds.amazonaws.com,1433;Database=FaxVerification.Test;TrustServerCertificate=True;uid=admin;pwd=Resolve_Coworking"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=FaxVerification;Trusted_Connection=True;TrustServerCertificate=True"
+    //"Default": "Server=databaseserver.cbyajjwizxr4.us-east-1.rds.amazonaws.com,1433;Database=FaxVerification.Test;TrustServerCertificate=True;uid=admin;pwd=Resolve_Coworking"
+    //"Default": "Server=databaseserver.cbyajjwizxr4.us-east-1.rds.amazonaws.com,1433;Database=FaxVerification.Medical.Test;TrustServerCertificate=True;uid=admin;pwd=Resolve_Coworking"
   },
-  "InputFolderPath": "D:\\Data\\Invoices",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "InputFolderPath": "D:\\Data\\Invoices",
   "OutputFolderPath": "D:\\Vizipp-Inc\\src\\FaxVerification.Web\\wwwroot\\Pdf",
-  "Engine": "C:\\Users\\vijay.chaudhari\\Downloads\\stanford-ner-4.2.0",
-  "TestDataPath": "C:\\Users\\vijay.chaudhari\\source\\repos\\TextExtraction\\TextExtraction\\tessdata",
-  "SearchKeys": [
-    //"Name of the Patient",
-    //"Name",
-    //"Patient Name",
-    //"Insured Name",
-    //"Member Name",
-    //"DOB",
-    //"Birth Date",
-    //"Date of Birth",
-    "Load",
-    "Invoice",
-    "Invoice Number",
-    "Date",
-    "Purchase Order",
-    "Amount",
-    "Reference",
-    "Rate",
-    "Total",
-    "Balance Due"
-  ]
+  "GhostScript": "C:\\Program Files\\gs\\gs10.00.0\\bin\\gsdll64.dll",
+  "ExtractPatientDetails": false,
+  "ExtractInvoiceDetails": true,
+  "EnableHighlight": false,
+  "EnableEncryption": false,
+  "Testing": false,
+  "SearchKeys": {
+    "PatientKeys": [
+      "Name of the Patient",
+      "Name",
+      "Patient Name",
+      "Insured Name",
+      "Member Name",
+      "DOB",
+      "Birth Date",
+      "Date of Birth"
+    ],
+    "InvoiceKeys": [
+      "Load",
+      "Invoice",
+      "Invoice Number",
+      "Date",
+      "Purchase Order",
+      "Amount",
+      "Reference",
+      "Rate",
+      "Total",
+      "Balance Due"
+    ]
+  }
 }
