Changed Model class

--- a/TextExtraction/appsettings.json
+++ b/TextExtraction/appsettings.json
@@ -10,14 +10,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "InputFolderPath": "D:\\Data\\Invoices",
-  "OutputFolderPath": "D:\\Vizipp-Inc\\src\\FaxVerification.Web\\wwwroot\\Pdf",
+  "InputFolderPath": "D:\\Data\\Medical",
+  "OutputFolderPath": "D:\\Data\\Processed",
   "GhostScript": "C:\\Program Files\\gs\\gs10.00.0\\bin\\gsdll64.dll",
-  "ExtractPatientDetails": false,
-  "ExtractInvoiceDetails": true,
+  "ExtractPatientDetails": true,
+  "ExtractInvoiceDetails": false,
   "EnableHighlight": false,
   "EnableEncryption": false,
-  "Testing": false,
+  "Testing": true,
   "SearchKeys": {
     "PatientKeys": [
       "Name of the Patient",
