--- a/TextExtraction/appsettings.json
+++ b/TextExtraction/appsettings.json
@@ -10,11 +10,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "InputFolderPath": "D:\\Data\\Medical",
+  "InputFolderPath": "D:\\Data\\Invoices",
   "OutputFolderPath": "D:\\Data\\Processed",
   "GhostScript": "C:\\Program Files\\gs\\gs10.00.0\\bin\\gsdll64.dll",
-  "ExtractPatientDetails": true,
-  "ExtractInvoiceDetails": false,
+  "TemaplateId" : "",
+  "ExtractPatientDetails": false,
+  "ExtractInvoiceDetails": true,
   "EnableHighlight": false,
   "EnableEncryption": false,
   "Testing": true,
