Added ConfigurationSettings template

--- a/TextExtraction/appsettings.json
+++ b/TextExtraction/appsettings.json
@@ -18,7 +18,7 @@
   "ExtractInvoiceDetails": true,
   "EnableHighlight": false,
   "EnableEncryption": false,
-  "Testing": true,
+  "Testing": false,
   "SearchKeys": {
     "PatientKeys": [
       "Name of the Patient",
