--- a/TextExtraction/appsettings.json
+++ b/TextExtraction/appsettings.json
@@ -1,19 +1,12 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=FaxVerification;Trusted_Connection=True;TrustServerCertificate=True"
-    //"Default": "Server=databaseserver.cbyajjwizxr4.us-east-1.rds.amazonaws.com,1433;Database=FaxVerification.Test;TrustServerCertificate=True;uid=admin;pwd=Resolve_Coworking"
-    //"Default": "Server=databaseserver.cbyajjwizxr4.us-east-1.rds.amazonaws.com,1433;Database=FaxVerification.Medical.Test;TrustServerCertificate=True;uid=admin;pwd=Resolve_Coworking"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+    //"Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=FaxVerification;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=databaseserver.cbyajjwizxr4.us-east-1.rds.amazonaws.com,1433;Database=FaxVerification.Test;TrustServerCertificate=True;uid=admin;pwd=Resolve_Coworking"
   },
   "InputFolderPath": "D:\\Data\\Invoices",
   "OutputFolderPath": "D:\\Data\\Processed",
   "GhostScript": "C:\\Program Files\\gs\\gs10.00.0\\bin\\gsdll64.dll",
-  "TemaplateId" : "",
+  "TemaplateId": "5DA7DF30-566A-8355-2CEE-3A0B7F2F4AF3",
   "ExtractPatientDetails": false,
   "ExtractInvoiceDetails": true,
   "EnableHighlight": false,
