Dynamic fields with table details

--- a/TextExtraction/appsettings.json
+++ b/TextExtraction/appsettings.json
@@ -1,17 +1,13 @@
 {
-  "ConnectionStrings": {
-    //"Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=FaxVerification;Trusted_Connection=True;TrustServerCertificate=True"
-    "Default": "Server=databaseserver.cbyajjwizxr4.us-east-1.rds.amazonaws.com,1433;Database=FaxVerification.Test;TrustServerCertificate=True;uid=admin;pwd=Resolve_Coworking"
-  },
+  "APIServer": "http://150.136.178.123/",
   "InputFolderPath": "D:\\Data\\Invoices",
   "OutputFolderPath": "D:\\Data\\Processed",
   "GhostScript": "C:\\Program Files\\gs\\gs10.00.0\\bin\\gsdll64.dll",
-  "TemaplateId": "5DA7DF30-566A-8355-2CEE-3A0B7F2F4AF3",
+  "TemaplateId": "181003CD-F98A-B44A-17B5-3A0BACE2050C",
   "ExtractPatientDetails": false,
   "ExtractInvoiceDetails": true,
-  "EnableHighlight": false,
   "EnableEncryption": false,
-  "Testing": false,
+  "Testing": true,
   "SearchKeys": {
     "PatientKeys": [
       "Name of the Patient",
@@ -24,16 +20,14 @@
       "Date of Birth"
     ],
     "InvoiceKeys": [
-      "Load",
       "Invoice",
-      "Invoice Number",
       "Date",
-      "Purchase Order",
-      "Amount",
-      "Reference",
-      "Rate",
+      "Invoice Date",
+      "Purchase Order No",
+      "Gross amount",
+      "Tax amount",
       "Total",
-      "Balance Due"
+      "Customer number"
     ]
   }
 }
