Added template based code and remove previous regex code

--- a/TextExtraction/appsettings.json
+++ b/TextExtraction/appsettings.json
@@ -1,33 +1,15 @@
 {
-  "APIServer": "http://150.136.178.123/",
+  "APIServer": "https://localhost:44340/",
   "InputFolderPath": "D:\\Data\\Invoices",
   "OutputFolderPath": "D:\\Data\\Processed",
+  "PendingPath": "D:\\Data\\Pending",
+  "ArchiveFolder": "D:\\Data\\Archive",
   "GhostScript": "C:\\Program Files\\gs\\gs10.00.0\\bin\\gsdll64.dll",
-  "TemaplateId": "181003CD-F98A-B44A-17B5-3A0BACE2050C",
-  "ExtractPatientDetails": false,
-  "ExtractInvoiceDetails": true,
-  "EnableEncryption": false,
   "Testing": true,
-  "SearchKeys": {
-    "PatientKeys": [
-      "Name of the Patient",
-      "Name",
-      "Patient Name",
-      "Insured Name",
-      "Member Name",
-      "DOB",
-      "Birth Date",
-      "Date of Birth"
-    ],
-    "InvoiceKeys": [
-      "Invoice",
-      "Date",
-      "Invoice Date",
-      "Purchase Order No",
-      "Gross amount",
-      "Tax amount",
-      "Total",
-      "Customer number"
-    ]
-  }
+  "FileKey": [
+    {
+      "Key": "00000264",
+      "VendorId": "4343"
+    }
+  ]
 }
