Page OCR confidence and issue fixes

--- a/TextExtraction/appsettings.json
+++ b/TextExtraction/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "APIServer": "https://localhost:44340/",
+  "APIServer": "http://150.136.178.123/",
   "InputFolderPath": "D:\\Data\\Invoices",
   "OutputFolderPath": "D:\\Data\\Processed",
   "PendingPath": "D:\\Data\\Pending",
